--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
     "emoji-picker-react": "^4.12.0",
+    "framer-motion": "^11.5.6",
     "lucide-react": "^0.441.0",
     "moment": "^2.30.1",
     "next": "14.2.12",
